--- a/src/main/webapp/static/title.html
+++ b/src/main/webapp/static/title.html
@@ -53,10 +53,10 @@
         }
     }
 </script>
-<div id="title"><a href="index.jsp" id="titleLink">模具管理系统</a></div>
+<div id="title">模具管理系统</div>
 <div id="userInfo">
     <div>欢迎您，</div>
     <div id="userNameDiv"></div>
-    <div id="adminLinkDiv" style="display: none">|<a href="admin.html">管理后台</a></div>
+    <div id="adminLinkDiv" style="display: none">|<a href="none.html">管理后台</a></div>
     <div id="logoutDiv">|<a href="javascript:logout()">安全退出</a></div>
 </div>
