模具汇总表完毕

--- a/src/main/webapp/static/model/addModel.html
+++ b/src/main/webapp/static/model/addModel.html
@@ -16,22 +16,22 @@
 <body>
     <div id="form1" class="liger-form">
         <div class="fields">
-            <input data-type="text" data-label="编号" data-name="q_modelNo" id="q_modelNo" />
-            <input data-type="text" data-label="名字" data-name="q_name" id="q_name"/>
+            <input data-type="text" data-label="图号" data-name="q_modelNo" id="q_modelNo" />
+            <input data-type="text" data-label="名称" data-name="q_name" id="q_name"/>
             <div data-type="select" data-label="类型" data-name="q_modelType">
                 <input class="editor"  data-textField="name" data-valueField="id"/>
             </div>
             <input data-type="text" data-label="存放位置" data-name="q_storeLocation" id="q_storeLocation"/>
             <input data-type="text" data-label="零件材质" data-name="q_lingjiancaizhi" id="q_lingjiancaizhi"/>
-            <input data-type="date" data-label="创建时间" data-name="q_createTime" id="q_createTime"/>
-            <input data-type="text" data-label="创建地点" data-name="q_createLocation" id="q_createLocation"/>
+            <input data-type="date" data-label="制造时间" data-name="q_createTime" id="q_createTime"/>
+            <input data-type="text" data-label="制造地点" data-name="q_createLocation" id="q_createLocation"/>
             <input data-type="text" data-label="备注" data-name="q_remark" id="q_remark"/>
             <input data-type="text" data-label="明细(|分割多条)" data-name="q_detail" id="q_detail"/>
 
         </div>
     </div>
     <button type="button" id="add" class="l-button l-button-submit">保存</button>
-    <script src="../js/jquery-3.1.1.min.js"></script>
+    <script src="../js/jquery-1.7.2.min.js"></script>
     <script src="../tools/ligerUI/ligerUI/js/ligerui.all.min.js"></script>
     <script src="../js/common.js"></script>
     <script>
