--- a/src/main/webapp/static/model/modelBorrowList.html
+++ b/src/main/webapp/static/model/modelBorrowList.html
@@ -18,7 +18,7 @@
 <div id="borrowRecordGrid">
 
 </div>
-<script src="../js/jquery-3.1.1.min.js"></script>
+<script src="../js/jquery-1.7.2.min.js"></script>
 <script src="../tools/ligerUI/ligerUI/js/ligerui.all.min.js"></script>
 <script src="../js/common.js"></script>
 <script>
@@ -44,7 +44,7 @@
                         type:"select", data:isReturnType, valueField: "isReturn", textField: "name"
                     }
                 },
-                {type:'lable',name:"borrowCustomer", display:"借给谁",
+                {type:'lable',name:"borrowCustomer", display:"谁来借",
                     editor : {
                         type:"text"
                     }
@@ -54,7 +54,7 @@
                         type:"text"
                     }
                 },
-                {type:'lable',name:"approvalPerson", display:"执行人",
+                {type:'lable',name:"approvalPerson", display:"借出人",
                     editor : {
                         type:"text"
                     }
