--- a/src/main/webapp/static/manage.html
+++ b/src/main/webapp/static/manage.html
@@ -4,10 +4,11 @@
     <title>模具管理系统</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link href="tools/ligerUI/ligerUI/skins/Aqua/css/ligerui-all.css" rel="stylesheet" type="text/css" />
-    <script src="js/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
     <script src="tools/ligerUI/ligerUI/js/core/base.js" type="text/javascript"></script>
     <script src="tools/ligerUI/ligerUI/js/plugins/ligerLayout.js" type="text/javascript"></script>
     <script src="tools/ligerUI/ligerUI/js/plugins/ligerTab.js" type="text/javascript"></script>
+    <script src="js/common.js"></script>
     <script type="text/javascript">
         var count = 0;
         var tab;
