--- a/src/main/webapp/static/test.html
+++ b/src/main/webapp/static/test.html
@@ -9,10 +9,10 @@
 
     <title>test</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/datatables/1.10.16/css/jquery.dataTables.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/datatables/1.10.16/css/dataTables.bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <table class="cell-border" id="tba" style="width:100%">
+    <table class="table table-striped table-bordered stripe" id="tba" style="width:100%">
         <thead>
         <tr>
             <th>第一列</th>
@@ -25,6 +25,7 @@
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.bootcss.com/datatables/1.10.16/js/jquery.dataTables.js"></script>
+    <script src="https://cdn.bootcss.com/datatables/1.10.16/js/dataTables.bootstrap.min.js"></script>
     <script src="test.js"></script>
 </body>
 </html>
